# lightopic

./:  requirements-dev.txt   requirements.txt  .gitignore  .pre-commit-config.yaml  Makefile  README.md  dev_requirements.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish-to-pypi.yml
lightopic/: lightbertopic.py
