[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lightopic"
version = "0.0.3"
description = "Slimmer version of BERTopic for transforming new data with an existing, trained model."
authors = [{name = "Hamed Bastan-Hagh", email = "hamed@bastanhagh.com" }]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "hdbscan",
    "joblib",
    "numpy",
    "umap-learn",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
bertopic = [
    "bertopic",
]
dev = [
    "bertopic",
    "build",
    "ipykernel",
    "myst-nb",
    "nbstripout",
    "pre-commit",
    "pytest",
    "ruff",
    "sphinx-autoapi",
    "sphinx-rtd-theme",
    "sphinx",
]

[dependency-groups]
dev = [
    "bertopic>=0.16.4",
    "build>=1.2.2.post1",
    "ipykernel>=6.29.5",
    "myst-nb>=1.1.2",
    "nbstripout>=0.7.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.7.2",
    "sphinx-autoapi>=3.3.3",
    "sphinx-rtd-theme>=3.0.1",
    "sphinx>=8.1.3",
]

[project.urls]
Repository = "https://github.com/hamedbh/lightopic/"
Issues = "https://github.com/hamedbh/lightopic/issues"

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:n_jobs value \d+ overridden to \d+ by setting random_state'
]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
# The default set of rules is "E4", "E7", "E9", "F"
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
